<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="talkback_title" translatable="false">TalkBack For Developers</string>
    <string name="talkback_service_description">
      When TalkBack is on, it provides spoken feedback so that you can use your device without looking at the screen. This can be helpful for people who are blind or have low vision.\n\nTo navigate using TalkBack:\n•  Swipe right or left to move between items\n•  Double-tap to activate an item\n•  Drag two fingers to scroll\n\nTo turn off TalkBack:\n•  Tap the switch. You’ll see an outline. Double-tap the switch.\n•  On the confirmation message, tap OK. Then double-tap OK.
    </string>
    <string name="talkback_service_html_description">
      <![CDATA[When TalkBack is on, it provides spoken feedback so that you can use your device without looking at the screen. TalkBack is intended for situations or people who have difficulty seeing the screen.<br><br><b>How to use TalkBack</b><br>• Swipe right or left to move between items<br>• Double-tap to activate an item<br>• Drag 2 fingers to scroll<br><b>How to turn off TalkBack</b><br>1. In Settings, tap <b>Use TalkBack</b>. There will be an outline. Double-tap it.<br>2. On the confirmation message, tap <b>Stop</b>. There will be an outline. Double-tap it.]]>
    </string>
    <string name="talkback_service_summary">Speak items on screen</string>
    <string name="talkback_preferences_title">TalkBack settings</string>
    <string name="tts_preferences_title">Text-to-speech settings</string>
    <string name="language_options">Languages</string>
    <string name="spoken_language">Spoken language</string>
  <string name="actions">Actions</string>
    <string name="system_actions">System actions</string>
    <string name="talkback_preferences_subtitle">Version <xliff:g id="version_name">%1$s</xliff:g></string>
    <string name="label_manager_summary_title">Manage custom labels</string>
    <string name="label_manager_package_title">Manage Labels for <xliff:g id="applicationLabel" example="Gmail">%1$s</xliff:g></string>
    <string name="manage_label">Manage label</string>
    <string name="label_manager_no_packages_message">There are currently no custom labels\n\n<b>How to create a custom label</b>\nNavigate to an unlabeled image and add a label from the TalkBack menu</string>
    <string name="label_manager_timestamp_text">Last modified <xliff:g id="timestamp" example="1/1/11 11:11 AM">%1$s</xliff:g></string>
    <string name="search_mode_cancel">Search canceled.</string>
    <string name="notification_type_status_started">Started</string>
    <string name="notification_type_status_stopped">Stopped</string>
    <string name="template_no_text_selected">No text selected</string>
    <string name="template_charging">Charging <xliff:g id="changing_status">%1$s</xliff:g> Battery level <xliff:g id="battery_level">%2$s</xliff:g> percent.</string>
    <string name="template_charging_lite">Charging <xliff:g id="changing_status" example="Started">%1$s</xliff:g></string>
  <string name="template_language_options_menu_item"><xliff:g id="language">%1$s</xliff:g> (<xliff:g id="country">%2$s</xliff:g>)</string>
    <string name="value_ringer_vibrate">Ringer vibrate.</string>
    <string name="value_ringer_silent">Ringer silent.</string>
    <string name="value_screen_on">Screen on.</string>
    <string name="value_screen_off">Screen off.</string>
    <string name="value_device_unlocked">Device unlocked.</string>
    <string name="title_pref_category_audio">Audio</string>
    <string name="title_pref_speech_volume">Speech volume</string>
    <string name="title_pref_speak_screenoff">Speak notifications when screen is off</string>
    <string name="title_pref_verbose_scroll_announcement">Always speak number of list items</string>
    <string name="summary_pref_verbose_scroll_announcement">Speak count for all scrolling methods</string>
    <string name="title_pref_cover_proximity_sensor">Cover proximity sensor to stop speech</string>
    <string name="title_pref_phonetic_letters">Speak letters with examples</string>
    <string name="summary_pref_phonetic_letters">When you select keyboard keys or navigate by character, you\'ll hear an example along with each letter, like \"h, hotel\"</string>
    <string name="title_pref_punctuation">Speak punctuation and symbols</string>
    <string name="title_pref_capital_letters">Capital letters</string>
    <string name="capital_letters_nothing">Do nothing</string>
    <string name="capital_letters_speak_capital">Say “capital”</string>
    <string name="capital_letters_change_pitch">Change pitch</string>
    <string name="capital_letters_sound_feedback">Play sound</string>
    <string name="title_pref_a11y_hints">Speak usage hints</string>
    <string name="summary_pref_a11y_hints">After describing content, suggest how to use</string>
    <string name="pref_speak_container_element_positions_title">Speak list and grid info</string>
  <string name="Reset_gesture_settings_dialog_title">Reset gestures?</string>
  <string name="Reset_gesture_settings_set_dialog_title">Reset gestures of current set?</string>
  <string name="message_reset_gesture_settings_confirm_dialog">This will reset all gestures to their default actions.\n\nYou will lose any changes that you have made.</string>
  <string name="reset_button_in_reset_gesture_settings_confirm_dialog">Reset</string>
  <string name="gestures_announce_reset_gesture_settings">The gesture settings have been reset.</string>
    <string name="pref_speak_roles_title">Speak element type</string>
    <string name="pref_speak_roles_summary">For focused items</string>
    <string name="title_pref_speak_element_ids">Speak element IDs</string>
    <string name="summary_pref_speak_element_ids">For unlabeled buttons</string>
    <string name="pref_speak_system_window_titles_title">Speak window names</string>
    <string name="pref_allow_frequent_content_change_announcement_title">Speak all progress updates</string>
    <string name="summary_pref_allow_frequent_content_change_announcement">Includes updates while downloading, following driving directions, and more. When turned off, you’ll still get less frequent updates.</string>
    <string name="pref_speak_system_window_titles_summary">Speak system and input windows, like when you switch to the status bar, notifications, or another keyboard</string>
    <string name="title_pref_explore_by_touch">Explore by touch</string>
    <string name="title_pref_category_controls">Controls</string>
    <string name="title_pref_category_braille">Braille</string>
    <string name="title_pref_category_general">General</string>
    <string name="title_pref_single_tap">Single-tap to activate</string>
    <string name="summary_pref_single_tap">Tap once on a focused item to activate</string>
    <string name="pref_verbosity_title">Verbosity</string>
    <string name="pref_punctuation_title">Speak punctuation and symbols</string>
    <string name="title_pref_category_manage_focus_indicator">Customize focus</string>
    <string name="title_pref_category_manage_gestures">Customize gestures</string>
    <string name="title_pref_manage_labels">Custom labels</string>
    <string name="title_pref_manage_customize_menus">Customize menus</string>
    <string name="title_pref_category_context_menu">Customize TalkBack menu</string>
    <string name="title_pref_category_selector_menu">Customize reading controls</string>
    <string name="title_pref_category_navigation_menu">Edit navigation options</string>
    <string name="pref_category_context_menu_summary">To use the TalkBack menu, tap the screen with 3 fingers. You can also swipe up then right, or swipe down then right.</string>
    <string name="pref_category_context_menu_summary_single_finger">To use the TalkBack menu, swipe down then right.</string>
    <string name="pref_category_selector_menu_summary">To use the reading controls, swipe left or right with 3 fingers. You can also swipe up or down with 3 fingers.</string>
    <string name="pref_category_selector_menu_summary_single_finger">To use the reading controls, swipe up then down.</string>
    <string name="title_pref_manage_keyboard_shortcuts">Keyboard shortcuts</string>
    <string name="title_pref_export_custom_labels">Export custom labels</string>
    <string name="title_pref_play_store">Open TalkBack at the Play Store</string>
    <string name="summary_pref_play_store">Current TalkBack Version: <xliff:g id="version_number">%1$s</xliff:g></string>
    <string name="title_pref_help_and_feedback">Help &#38; feedback</string>
    <string name="pref_item_licenses">Open Source Licenses</string>
    <string name="title_pref_tutorial">Tutorial</string>
    <string name="title_pref_help">Help</string>
    <string name="title_pref_show_tos">Terms of service</string>
    <string name="title_pref_show_privacy_policy">Privacy policy</string>
    <string name="title_pref_category_fingerprint_touch_shortcuts">Fingerprint gestures</string>
    <string name="title_pref_category_tutorial_and_help">Tutorial and help</string>
    <string name="title_pref_category_help_no_tutorial">Help</string>
    <string name="title_pref_category_typing">Typing and keyboard</string>
    <string name="title_pref_advanced_settings">Advanced settings</string>
    <string name="reset_gesture_settings_title">Reset gesture settings</string>
    <string name="one_finger_gestures_title">1 finger</string>
    <string name="one_finger_back_forth_gestures_title">1 finger back-and-forth</string>
    <string name="one_finger_angle_gestures_title">1 finger angle</string>
    <string name="two_finger_gestures_title">2 fingers</string>
    <string name="three_finger_gestures_title">3 fingers</string>
    <string name="four_finger_gestures_title">4 fingers</string>
    <string name="pref_verbosity_preset_title">Choose a preset</string>
    <string name="pref_verbosity_preset_entry_high">High</string>
    <string name="pref_verbosity_preset_entry_custom">Custom</string>
    <string name="pref_verbosity_preset_entry_low">Low</string>
    <string name="pref_verbosity_category_preset_settings_title">Verbosity details</string>
    <string name="pref_verbosity_preset_change"><xliff:g id="preset_name" example="High">%1$s</xliff:g> verbosity is now active.</string>
    <string name="pref_gesture_set_entry_0">0</string>
    <string name="pref_gesture_set_entry_1">1</string>
    <string name="keycombo_keymap_changes_instruction_title">Update your TalkBack keymap</string>
  <string name="label_screen_search_result">Search result</string>
  <string name="title_screen_search" translatable="false">@string/title_show_screen_search</string>
  <string name="title_cancel_screen_search">Close search</string>
  <string name="title_clear_keyword">Clear input</string>
  <string name="title_previous_screen">Previous screen</string>
  <string name="title_next_screen">Next screen</string>
  <string name="hint_type_search_term">Search term</string>
  <string name="talkback_is_on">TalkBack is on</string>
  <string name="talkback_turn_off_description">TalkBack reads content on your screen aloud and changes how navigation works on your device. To turn it off, tap “Turn off TalkBack” 2 times.</string>
  <string name="turn_off_talkback">Turn off TalkBack</string>
  <string name="title_pref_thick_border">Thick borders</string>
  <string name="title_pref_category_border_color">Color</string>
  <string name="title_pref_default_color">Default</string>
  <string name="title_pref_red">Red</string>
  <string name="title_pref_orange">Orange</string>
  <string name="title_pref_yellow">Yellow</string>
  <string name="title_pref_green">Green</string>
  <string name="title_pref_blue">Blue</string>
  <string name="title_pref_grey">Grey</string>
</resources>