<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="@string/pref_category_manage_focus_indicator_key">

  <SwitchPreference
      android:key="@string/pref_thick_border_key"
      android:title="@string/title_pref_thick_border"
      android:persistent="true" />

  <com.google.android.accessibility.utils.preference.AccessibilitySuitePreferenceCategory
      android:key="@string/pref_border_color_category_key"
      android:title="@string/title_pref_category_border_color">
    <!-- For open-source, replace "CheckBoxPreference" with "com.android.settingslib.widget.RadioButtonPreference". -->
    <com.google.android.accessibility.utils.preference.AccessibilitySuiteRadioButtonPreference
      android:title="@string/title_pref_default_color" />
    <com.google.android.accessibility.utils.preference.AccessibilitySuiteRadioButtonPreference
        android:title="@string/title_pref_red" />
    <com.google.android.accessibility.utils.preference.AccessibilitySuiteRadioButtonPreference
        android:title="@string/title_pref_orange" />
    <com.google.android.accessibility.utils.preference.AccessibilitySuiteRadioButtonPreference
        android:title="@string/title_pref_yellow" />
    <com.google.android.accessibility.utils.preference.AccessibilitySuiteRadioButtonPreference
        android:title="@string/title_pref_green" />
    <com.google.android.accessibility.utils.preference.AccessibilitySuiteRadioButtonPreference
        android:title="@string/title_pref_blue" />
    <com.google.android.accessibility.utils.preference.AccessibilitySuiteRadioButtonPreference
        android:title="@string/title_pref_grey" />
  </com.google.android.accessibility.utils.preference.AccessibilitySuitePreferenceCategory>


</PreferenceScreen>
