<?xml version="1.0" encoding="utf-8"?>
<com.google.android.accessibility.talkback.screensearch.SearchScreenOverlayLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/overlay_background"
    android:contentDescription="@string/title_screen_search"
    android:orientation="vertical">
  <RelativeLayout
      android:id="@+id/control_layout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">
    <ImageButton
        android:id="@+id/cancel_search"
        android:layout_width="@android:dimen/app_icon_size"
        android:layout_height="@android:dimen/app_icon_size"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:background="@android:color/transparent"
        android:contentDescription="@string/title_cancel_screen_search"
        android:src="@drawable/quantum_ic_close_white_24"/>
    <View
        android:id="@+id/cancel_divider"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:layout_alignBottom="@id/cancel_search"
        android:layout_toEndOf="@id/cancel_search"
        android:background="@color/divider_color"
        android:focusable="false"/>
    <ImageButton
        android:id="@+id/next_screen"
        android:layout_width="@android:dimen/app_icon_size"
        android:layout_height="@android:dimen/app_icon_size"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@id/cancel_divider"
        android:background="@android:color/transparent"
        android:contentDescription="@string/title_next_screen"
        android:src="@drawable/quantum_ic_arrow_downward_white_24"/>
    <ImageButton
        android:id="@+id/previous_screen"
        android:layout_width="@android:dimen/app_icon_size"
        android:layout_height="@android:dimen/app_icon_size"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@id/next_screen"
        android:background="@android:color/transparent"
        android:contentDescription="@string/title_previous_screen"
        android:src="@drawable/quantum_ic_arrow_upward_white_24"/>
    <View
        android:id="@+id/button_divider"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:layout_alignBottom="@id/previous_screen"
        android:layout_toEndOf="@id/previous_screen"
        android:background="@color/divider_color"
        android:focusable="false"/>
    <EditText
        android:id="@+id/keyword_edit"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignBottom="@id/previous_screen"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@id/button_divider"
        android:layout_toStartOf="@+id/clear_keyword"
        android:background="@android:color/transparent"
        android:hint="@string/hint_type_search_term"
        android:imeOptions="actionSearch|flagNoExtractUi"
        android:inputType="text"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:singleLine="true"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/abc_primary_text_material_dark"
        android:textColorHint="@color/abc_hint_foreground_material_dark"/>
    <ImageButton
        android:id="@id/clear_keyword"
        android:layout_width="@android:dimen/app_icon_size"
        android:layout_height="@android:dimen/app_icon_size"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:background="@android:color/transparent"
        android:contentDescription="@string/title_clear_keyword"
        android:src="@drawable/quantum_ic_cancel_white_24"/>
  </RelativeLayout>
  <View
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:background="@color/divider_color"
      android:focusable="false"/>
  <android.support.v7.widget.RecyclerView
      android:id="@+id/search_result"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:contentDescription="@string/label_screen_search_result"/>
</com.google.android.accessibility.talkback.screensearch.SearchScreenOverlayLayout>
